tests/ui/proc-macro/inner-attr-file-mod.rs
//@ compile-flags: -Z span-debug
//@ proc-macro: test-macros.rs

#![no_std] // Don't load unnecessary hygiene information from std
extern crate std;

#[macro_use]
extern crate test_macros;

#[deny(unused_attributes)]
mod module_with_attrs;
//~^ ERROR file modules in proc macro input are unstable

fn main() {}

//~? ERROR inner macro attributes are unstable
